--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,3 @@
 RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^ index.php [QSA,L]
+RewriteRule ^$ ../index.php [L,R=302]
+RewriteRule ^index\.php$ ../index.php [L,R=302]
