--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,7 @@
 Options -Indexes
 RewriteEngine On
-RewriteRule ^$ ../index.php [L,R=302]
-RewriteRule ^index\.php$ ../index.php [L,R=302]
+
+# Quando acessar /catatreco/public/*, mantém o front controller local
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^ index.php [QSA,L]
