--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
+Options -Indexes
+DirectoryIndex index.php
+
 RewriteEngine On
 RewriteBase /catatreco/
 
@@ -5,4 +8,4 @@ RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^ - [L]
 
-RewriteRule ^ index.php [L,QSA]
+RewriteRule ^ public/index.php [L,QSA]
