--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ storage/logs/*
 # --- Relatórios gerados (PDF/CSV/XLSX) ---
 storage/relatorios/*
 !storage/relatorios/.gitkeep
+storage/reports/*
+!storage/reports/.gitkeep
 
 # --- Uploads do sistema (runtime) ---
 uploads/*
